# borandi

./: .gitignore  README.md  index.html  package.json  progress.md  tsconfig.json  vite.config.ts
.analysis/polytd/: rfLrXQEAi2o.info.json  rfLrXQEAi2o.ko.vtt
docs/: active-skill-system-design.md  gpt-pro-pixi-refactor-prompt.md  manual-balance-playlog.example.json  poly_td_video_analysis.md  ui-asset-catalog.md  ui-asset-generation-prompts.md  ui-blank-template-todo.md  ui-dynamic-apply-plan.md  unit-detail-card-asset-plan.md
randi/: README.md  index.html  package.json  vite.config.ts
randi/scripts/: engine-smoke.cjs  screenshots.mjs
randi/src/: main.ts  profile.ts
scripts/: balance-audit.mjs  balance-audit.test.js  balance-check.ts  balance-proof.mjs  balance-proof.test.js  browser-balance-playtest.mjs  browser-direct-playtest.mjs  generate-stage-minimaps.ts  generate_dark_fantasy_village_tileset.py  manual-playlog.mjs  manual-playlog.test.js  node-shims.d.ts  sandbox-check.mjs  sim.ts  slice-ui-assets-from-sheets.py
src/: App.tsx  gameRuntime.ts  main.ts  main.tsx  runtimeBridge.ts  runtimeContext.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/audio/: gameAudio.ts
src/board/: boardHitTest.test.ts  boardHitTest.ts
src/core/: advisor.ts  checksum.ts  engine.test.ts  engine.ts  manualProof.test.ts  manualProof.ts  manualProofCommands.test.ts  manualProofCommands.ts  manualProofResult.test.ts  manualProofResult.ts  path.ts  rng.ts  types.ts
src/data/: difficulty.ts  (+8 more)
(+105 files in other folders)
